@@ -31,6 +31,8 @@
 
     * NEW: Export midi selected visible tracks only. In main app menu.
 
+    * NEW: Export midi selected parts on visible tracks only. In main app menu.
+
     * NEW: LV2 midi-out support added. Supports things like midi arpeggiators, midi effects etc.
 
     Fixed: VST midi-out: Recording times were way off. (Midi arpeggiators, midi effects etc.)
